--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,11 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Crypto Multichart</title>
-    <style>
-      body {
-        background-color: #000000;
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-        color: white;
-        min-height: 100vh;
-      }
-    </style>
   </head>
-  <body>
+  <body style="margin: 0; background-color: black;">
     <div id="root"></div>
   </body>
 </html>
